[package]
name = "data-update-schedular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = {version = "~1.18", features = ["full"]}
uuid = {version = "1.1.2", features = ["v4"]}
futures = "0.3"
dotenv = "0.15.0"
